[package]
name = "crablangc_abi"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
tracing = "0.1"
rand = { version = "0.8.4", default-features = false, optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
crablangc_data_structures = { path = "../crablangc_data_structures", optional = true  }
crablangc_index = { path = "../crablangc_index", default-features = false }
crablangc_macros = { path = "../crablangc_macros", optional = true }
crablangc_serialize = { path = "../crablangc_serialize", optional = true  }

[features]
default = ["nightly", "randomize"]
randomize = ["rand", "rand_xoshiro"]
nightly = [
    "crablangc_data_structures",
    "crablangc_index/nightly",
    "crablangc_macros",
    "crablangc_serialize",
]
