[package]
name = "crablangc_ast_lowering"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crablangc_ast = { path = "../crablangc_ast" }
crablangc_ast_pretty = { path = "../crablangc_ast_pretty" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_index = { path = "../crablangc_index" }
crablangc_middle = { path = "../crablangc_middle" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_session = { path = "../crablangc_session" }
crablangc_span = { path = "../crablangc_span" }
crablangc_target = { path = "../crablangc_target" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
