[package]
name = "crablangc_codegen_ssa"
version = "0.0.0"
edition = "2021"

[lib]
test = false

[dependencies]
ar_archive_writer = "0.1.1"
bitflags = "1.2.1"
cc = "1.0.69"
itertools = "0.10.1"
tracing = "0.1"
libc = "0.2.50"
jobserver = "0.1.22"
tempfile = "3.2"
thorin-dwp = "0.4"
pathdiff = "0.2.0"
serde_json = "1.0.59"
snap = "1"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
regex = "1.4"

crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_arena = { path = "../crablangc_arena" }
crablangc_ast = { path = "../crablangc_ast" }
crablangc_span = { path = "../crablangc_span" }
crablangc_middle = { path = "../crablangc_middle" }
crablangc_type_ir = { path = "../crablangc_type_ir" }
crablangc_attr = { path = "../crablangc_attr" }
crablangc_symbol_mangling = { path = "../crablangc_symbol_mangling" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_fs_util = { path = "../crablangc_fs_util" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_incremental = { path = "../crablangc_incremental" }
crablangc_index = { path = "../crablangc_index" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_metadata = { path = "../crablangc_metadata" }
crablangc_query_system = { path = "../crablangc_query_system" }
crablangc_target = { path = "../crablangc_target" }
crablangc_session = { path = "../crablangc_session" }

[dependencies.object]
version = "0.30.1"
default-features = false
features = ["read_core", "elf", "macho", "pe", "unaligned", "archive", "write"]
