[package]
name = "crablangc_errors"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
tracing = "0.1"
crablangc_ast = { path = "../crablangc_ast" }
crablangc_ast_pretty = { path = "../crablangc_ast_pretty" }
crablangc_error_messages = { path = "../crablangc_error_messages" }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_span = { path = "../crablangc_span" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_target = { path = "../crablangc_target" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_lint_defs = { path = "../crablangc_lint_defs" }
crablangc_type_ir = { path = "../crablangc_type_ir" }
unicode-width = "0.1.4"
termcolor = "1.0"
annotate-snippets = "0.9"
termize = "0.1.1"
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.59"

[target.'cfg(windows)'.dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[features]
crablangc_use_parallel_compiler = ['crablangc_error_messages/crablangc_use_parallel_compiler']
