[package]
name = "crablangc_hir"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
crablangc_arena = { path = "../crablangc_arena" }
crablangc_target = { path = "../crablangc_target" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_error_messages = { path = "../crablangc_error_messages" }
crablangc_index = { path = "../crablangc_index" }
crablangc_span = { path = "../crablangc_span" }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_ast = { path = "../crablangc_ast" }
tracing = "0.1"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
odht = { version = "0.3.1", features = ["nightly"] }
