[package]
name = "crablangc_hir_pretty"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
crablangc_ast_pretty = { path = "../crablangc_ast_pretty" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_target = { path = "../crablangc_target" }
crablangc_span = { path = "../crablangc_span" }
crablangc_ast = { path = "../crablangc_ast" }
