[package]
name = "crablangc_hir_typeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.crablang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
tracing = "0.1"
crablangc_ast = { path = "../crablangc_ast" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_graphviz = { path = "../crablangc_graphviz" }
crablangc_index = { path = "../crablangc_index" }
crablangc_infer = { path = "../crablangc_infer" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_hir_analysis = { path = "../crablangc_hir_analysis" }
crablangc_hir_pretty = { path = "../crablangc_hir_pretty" }
crablangc_lint = { path = "../crablangc_lint" }
crablangc_middle = { path = "../crablangc_middle" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_session = { path = "../crablangc_session" }
crablangc_span = { path = "../crablangc_span" }
crablangc_target = { path = "../crablangc_target" }
crablangc_trait_selection = { path = "../crablangc_trait_selection" }
crablangc_type_ir = { path = "../crablangc_type_ir" }
