[package]
name = "crablangc_infer"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tracing = "0.1"
crablangc_middle = { path = "../crablangc_middle" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_index = { path = "../crablangc_index" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_span = { path = "../crablangc_span" }
crablangc_target = { path = "../crablangc_target" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
