[package]
name = "crablangc_lexer"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

repository = "https://github.com/crablang/crablang/"
description = """
CrabLang lexer used by crablangc. No stability guarantees are provided.
"""

# Note: do not remove this blank `[lib]` section.
# This will be used when publishing this crate as `crablangc-ap-crablangc_lexer`.
[lib]

# Note that this crate purposefully does not depend on other crablangc crates
[dependencies]
unicode-xid = "0.2.0"
unic-emoji-char = "0.9.0"

[dev-dependencies]
expect-test = "1.4.0"
