[package]
name = "crablangc_lint"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = "0.1"
unicode-security = "0.1.0"
crablangc_middle = { path = "../crablangc_middle" }
crablangc_ast_pretty = { path = "../crablangc_ast_pretty" }
crablangc_attr = { path = "../crablangc_attr" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_target = { path = "../crablangc_target" }
crablangc_ast = { path = "../crablangc_ast" }
crablangc_span = { path = "../crablangc_span" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_feature = { path = "../crablangc_feature" }
crablangc_index = { path = "../crablangc_index" }
crablangc_session = { path = "../crablangc_session" }
crablangc_trait_selection = { path = "../crablangc_trait_selection" }
crablangc_parse_format = { path = "../crablangc_parse_format" }
crablangc_infer = { path = "../crablangc_infer" }
crablangc_type_ir = { path = "../crablangc_type_ir" }
crablangc_macros = { path = "../crablangc_macros" }
