[package]
name = "crablangc_middle"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
bitflags = "1.2.1"
chalk-ir = "0.87.0"
derive_more = "0.99.17"
either = "1.5.0"
gsgdt = "0.1.2"
polonius-engine = "0.13.0"
crablangc_apfloat = { path = "../crablangc_apfloat" }
crablangc_arena = { path = "../crablangc_arena" }
crablangc_ast = { path = "../crablangc_ast" }
crablangc_attr = { path = "../crablangc_attr" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_errors = { path = "../crablangc_errors" }
# Used for intra-doc links
crablangc_error_messages = { path = "../crablangc_error_messages" }
crablangc_feature = { path = "../crablangc_feature" }
crablangc_graphviz = { path = "../crablangc_graphviz" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_index = { path = "../crablangc_index" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_query_system = { path = "../crablangc_query_system" }
crablangc-rayon-core = { version = "0.5.0", optional = true }
crablangc-rayon = { version = "0.5.0", optional = true }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_session = { path = "../crablangc_session" }
crablangc_span = { path = "../crablangc_span" }
crablangc_target = { path = "../crablangc_target" }
crablangc_type_ir = { path = "../crablangc_type_ir" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"

[features]
crablangc_use_parallel_compiler = ["crablangc-rayon", "crablangc-rayon-core"]
