[package]
name = "crablangc_mir_build"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
crablangc_arena = { path = "../crablangc_arena" }
tracing = "0.1"
either = "1"
crablangc_middle = { path = "../crablangc_middle" }
crablangc_apfloat = { path = "../crablangc_apfloat" }
crablangc_data_structures = { path = "../crablangc_data_structures" }
crablangc_index = { path = "../crablangc_index" }
crablangc_errors = { path = "../crablangc_errors" }
crablangc_hir = { path = "../crablangc_hir" }
crablangc_infer = { path = "../crablangc_infer" }
crablangc_macros = { path = "../crablangc_macros" }
crablangc_serialize = { path = "../crablangc_serialize" }
crablangc_session = { path = "../crablangc_session" }
crablangc_span = { path = "../crablangc_span" }
crablangc_target = { path = "../crablangc_target" }
crablangc_trait_selection = { path = "../crablangc_trait_selection" }
crablangc_ast = { path = "../crablangc_ast" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
